Fixed Header component layout shift introduced when theme is not yet mounted and increase page fadein duration.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -89,7 +89,7 @@ main.page-container {
   flex-direction: column;
   flex-grow: 1;
   align-items: center;
-  animation: fadein .75s;
+  animation: fadein 1s;
 }
 
 .display-flex {
